<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin"
    tools:context="activity.MainActivity">

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="2dp"
        android:padding="0dp"
        android:singleLine="true"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/publisher"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/company1" />

    <TextView
        android:id="@+id/publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:padding="0dp"
        tools:text="@string/company2"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher4_foreground" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/menu_size"
        android:layout_height="@dimen/menu_size"
        android:adjustViewBounds="false"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,publisher,imageView5,imageView2" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="16dp"
        tools:text="@string/text"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/barrierHeader" />

    <ImageView
        android:id="@+id/like"
        android:layout_width="@dimen/menu_size"
        android:layout_height="@dimen/menu_size"
        android:contentDescription="@string/todo3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@drawable/ic_like" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="@dimen/menu_size"
        android:layout_height="@dimen/menu_size"
        android:layout_marginStart="44dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like"
        app:srcCompat="@drawable/ic_share" />

    <ImageView
        android:id="@+id/view"
        android:layout_width="@dimen/menu_size"
        android:layout_height="@dimen/menu_size"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@drawable/ic_eye" />

    <TextView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        tools:text="@string/textview0"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/shares"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        tools:text="@string/textview2"
        android:textColor="@color/grey"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/share"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/share" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        tools:text="@string/textview1"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/like"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toTopOf="@+id/like" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />
</androidx.constraintlayout.widget.ConstraintLayout>